@@ -49,100 +49,76 @@ class paloSantoReportedeTroncalesusadasporHoraeneldia {
         }
     }
 
-    /*HERE YOUR FUNCTIONS*/
-    function ObtainReportedeTroncalesusadasporHoraeneldia($limit, $offset, $filter_field, $filter_value, $date_from, $date_to, $bExportando)
-   {
-        //Here your implementation
-        $where = "";
-
-        //PS Cambiamos el where por que vamos a  filtrar por troncales
-        if(isset($filter_value) & $filter_value !="")
-            $where = " trunk = '$filter_value'";
-
-        if(isset($date_from) && $date_from !="" && isset($date_to) && $date_to !="") {
-            if ($where!="") $where.=" and ";
-             $where .= " datetime_entry_queue between '".$date_from." 00:00:00' and '".$date_to." 23:59:59'";
+    function listarTraficoLlamadasHora($sFechaInicio, $sFechaFinal, $sTrunk = NULL)
+    {
+    	$regexp = '/^\d{4}-\d{2}-\d{2}$/';
+        if (!preg_match($regexp, $sFechaInicio)) {
+            $this->errMsg = '(internal) Invalid start date';
+        	return NULL;
         }
-        if ($where!="") {
-            $where = " WHERE ".$where;
+        if (!preg_match($regexp, $sFechaFinal)) {
+            $this->errMsg = '(internal) Invalid end date';
+            return NULL;
         }
-
-        $query   = "SELECT
-                        id_agent,
-                        id_queue_call_entry,
-                        DATE_FORMAT(datetime_entry_queue,'%H:%i:%S') as time_entry_queue,
-                        datetime_entry_queue,
-                        datetime_init,
-                        status,
-                        trunk
-                    FROM call_entry
-                    $where ORDER BY time_entry_queue";
-        $result=$this->_DB->fetchTable($query, true);
-
-        if(is_array($result)){
-            $data=array();
-            $total["terminada"]=$total["abandonada"]=$total["fin-monitoreo"]=$total["en-cola"]=0;
-
-            // SE LEE TODO EL QUERY PARA AGRUPARLOS POR HORA A LOS RESULTUADOS 
-            foreach($result as $key => $value){
-                // ESTE FOR AYUDA A PREGUNTAR EN QUE HORA CAE LA LLAMADA, SE PREGUNTA DESDE 00:00:00
-                // HASTA LA HORA EN QUE SE ENCUENTRE LA LLAMADA O HASTA LAS 11:59:59
-
-                for($hora=0; $hora<24; $hora++) {
-                    $horafin = $hora+1;
-                    if ($hora < 10) $hora = "0".$hora;
-                    if ($horafin < 10) $horafin = "0".$horafin;
-                    if($value['time_entry_queue']>="$hora:00:00" && $value['time_entry_queue']<"$horafin:00:00"){
-                        $data[$hora]['time_period'] = "$hora:00:00 - $horafin:00:00";
-                        // LLAMADAS QUE INGRESARON A LA COLA
-                        if(!isset($data[$hora]['entered']))
-                            $data[$hora]['entered'] = 1;
-                        else $data[$hora]['entered'] += 1;
-
-                        // LLAMADAS QUE INGRESARON A LA COLA Y FUERON CONTESTADAS
-                        if ($value['status']=="terminada" || ($value['status']=="fin-monitoreo" && !is_null($value['datetime_init'])) || $value['status']=="activa" || $value['status']=="hold") {
-                            if(!isset($data[$hora]['terminada']))
-                                $data[$hora]['terminada'] = 1;
-                            else $data[$hora]['terminada'] += 1;
-                            $total["terminada"]++;
-                        // LLAMADAS QUE INGRESARON A LA COLA Y FUERON ABANDONADAS
-                        } elseif ($value['status']=="abandonada") {
-                            if(!isset($data[$hora]['abandonada']))
-                                $data[$hora]['abandonada'] = 1;
-                            else $data[$hora]['abandonada'] += 1;
-                            $total["abandonada"]++;
-                        } elseif ($value['status']=="en-cola") {
-                            if(!isset($data[$hora]['en-cola']))
-                                $data[$hora]['en-cola'] = 1;
-                            else $data[$hora]['en-cola'] += 1;
-                            $total["en-cola"]++;
-                        } elseif ($value['status']=="fin-monitoreo") {
-                            if(!isset($data[$hora]['fin-monitoreo']))
-                                $data[$hora]['fin-monitoreo'] = 1;
-                            else $data[$hora]['fin-monitoreo'] += 1;
-                            $total["fin-monitoreo"]++;
-                        } 
-                        break;
-                    }
-                }
-            } // fin del foreach
-            $sTagInicio = (!$bExportando) ? '<b>' : '';
-            $sTagFinal = ($sTagInicio != '') ? '</b>' : '';
-            $data["total"]['time_period'] = $sTagInicio."TOTAL".$sTagFinal;
-            $data["total"]['entered'] = $total["terminada"]+$total["abandonada"]+$total["en-cola"]+ $total["fin-monitoreo"];
-            $data["total"]['entered'] = $sTagInicio.$data["total"]['entered'].$sTagFinal;
-            $data["total"]['terminada'] = $sTagInicio.$total["terminada"].$sTagFinal;
-            $data["total"]['abandonada'] = $sTagInicio.$total["abandonada"].$sTagFinal;
-            $data["total"]['en-cola'] = $sTagInicio.$total["en-cola"].$sTagFinal;
-            $data["total"]['fin-monitoreo'] = $sTagInicio.$total["fin-monitoreo"].$sTagFinal;
-
-        } else {
+        if ($sFechaFinal < $sFechaInicio) {
+        	$t = $sFechaInicio;
+            $sFechaInicio = $sFechaFinal;
+            $sFechaFinal = $t;
+        }
+        $paramSQL = array($sFechaInicio.' 00:00:00', $sFechaFinal.' 23:59:59');
+        $whereTrunk = '';
+        if (!empty($sTrunk)) {
+        	$whereTrunk = ' AND trunk = ? ';
+            $paramSQL[] = $sTrunk;
+        }
+        $sqlTrafico = <<<SQL_TRAFICO
+SELECT
+    DATE_FORMAT(datetime_entry_queue,'%H') AS H,
+    COUNT(datetime_entry_queue) AS N,
+    SUM(IF(datetime_init IS NULL, 0, 1)) AS Nhandled,
+    status
+FROM call_entry
+WHERE datetime_entry_queue BETWEEN ? and ? $whereTrunk
+GROUP BY H, status
+ORDER BY H, status
+SQL_TRAFICO;
+        $result = $this->_DB->fetchTable($sqlTrafico, TRUE, $paramSQL);
+        if (!is_array($result)) {
             $this->errMsg = $this->_DB->errMsg;
-            return array();
+            return NULL;
         }
-// echo "<pre>";
-// print_r($data);
-// echo "<pre>";
-        return $data;
+        
+        $hist = array();
+        foreach ($result as $tupla) {
+        	$iHora = (int)$tupla['H'];
+            if (!isset($hist[$iHora]))
+                $hist[$iHora] = array(
+                    'entered'       =>  0,
+                    'terminada'     =>  0,
+                    'abandonada'    =>  0,
+                    'en-cola'       =>  0,
+                    'fin-monitoreo' =>  0,
+                );
+            $hist[$iHora]['entered'] += $tupla['N'];
+            switch ($tupla['status']) {
+            case 'terminada':
+            case 'activa':
+            case 'hold':
+                $hist[$iHora]['terminada'] += $tupla['N'];
+                break;
+            case 'fin-monitoreo':
+                /* Llamadas dejadas de monitorear se marcan como terminadas si
+                 * fueron asignadas a un agente. Caso contrario se contabilizan
+                 * por separado. */
+                $hist[$iHora]['terminada'] += $tupla['Nhandled'];
+                $hist[$iHora]['fin-monitoreo'] += $tupla['N'] - $tupla['Nhandled'];
+                break;
+            default:
+                $hist[$iHora][$tupla['status']] += $tupla['N'];
+                break;
+            }
+        }
+        return $hist;
     }
-}?>
+}
+?>
