@@ -100,6 +100,12 @@ fi
 /etc/logrotate.d/elastixdialer
 
 %changelog
+* Tue Nov 13 2012 Alex Villacis Lasso <a_villacis@palosanto.com>
+- CHANGED: Trunks Used per Hour: core query method rewritten to use SQL 
+  parameters. SQL was reimplemented to use more efficient grouping. HTML
+  formatting moved to index.php. Trunk filter now allows report on calls from
+  all trunks.
+
 * Thu Nov  8 2012 Alex Villacis Lasso <a_villacis@palosanto.com>
 - DELETED: Agents Connection Time: removed. This report is now essentially 
   identical to Login Logout.
